// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render page with fake data 1`] = `
<div>
  <DashboardSummary
    expenses={1500}
    income={2400}
  />
  <div
    className="content-container"
  >
    <Connect(ExpenseListFilters) />
    <div
      className="content-container"
    >
      <button
        className="button--toggle"
        onClick={[Function]}
      >
         Toggle Legends
      </button>
      <Tabs
        className="tabs"
        defaultActiveKey="pie"
        id="uncontrolled-tab-example"
        mountOnEnter={false}
        unmountOnExit={false}
        variant="tabs"
      >
        <Tab
          eventKey="pie"
          title="Expenses Breakdown"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Purchases by Category 
            </h1>
            <Doughnut
              data={
                Object {
                  "datasets": Array [
                    Object {
                      "data": Array [
                        500,
                        100,
                      ],
                      "label": "a",
                    },
                  ],
                  "labels": Array [
                    "Groceries",
                    "Eating Out",
                  ],
                }
              }
              options={
                Object {
                  "legend": Object {
                    "display": false,
                    "position": "right",
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="line"
          title="Account Breakdown"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Remaining Funds (in $) by Date 
            </h1>
            <Line
              data={
                Object {
                  "datasets": Array [
                    Object {
                      "data": Array [
                        150,
                        200,
                        300,
                      ],
                      "label": "BoA",
                    },
                    Object {
                      "data": Array [
                        300,
                        200,
                        100,
                      ],
                      "label": "Chase",
                    },
                  ],
                  "labels": Array [
                    "04/01/20",
                    "04/02/20",
                    "04/03/20",
                  ],
                }
              }
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="bar"
          title="Income vs Expense"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Monthly Summary 
            </h1>
            <Bar
              data={
                Object {
                  "datasets": Array [
                    Object {
                      "data": Array [
                        500,
                        700,
                      ],
                      "label": "expenses",
                    },
                    Object {
                      "data": Array [
                        1000,
                        1000,
                      ],
                      "label": "income",
                    },
                  ],
                  "labels": Array [
                    "03/20",
                    "04/20",
                  ],
                }
              }
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="variable-bar"
          title="Category History"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Category History 
            </h1>
            <h3>
              add/remove desired categories
            </h3>
            <p>
              ***Warning*** Information only updates when categories are change
            </p>
            <p>
              There is no auto-update when dates change
            </p>
            <StateManager
              className="dropdown"
              defaultInputValue=""
              defaultMenuIsOpen={false}
              defaultValue={null}
              isClearable={true}
              isMulti={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Groceries",
                    "value": "Groceries",
                  },
                  Object {
                    "label": "Eating Out",
                    "value": "Eating Out",
                  },
                ]
              }
              placeholder="Select Categories to show"
            />
            <p>
              Chart HERE 
            </p>
            <Bar
              data={
                Object {
                  "datasets": Array [
                    Object {
                      "data": Array [
                        0,
                      ],
                    },
                  ],
                  "labels": Array [
                    "no data",
                  ],
                }
              }
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
      </Tabs>
    </div>
  </div>
</div>
`;

exports[`should render page with no data 1`] = `
<div>
  <DashboardSummary />
  <div
    className="content-container"
  >
    <Connect(ExpenseListFilters) />
    <div
      className="content-container"
    >
      <button
        className="button--toggle"
        onClick={[Function]}
      >
         Toggle Legends
      </button>
      <Tabs
        className="tabs"
        defaultActiveKey="pie"
        id="uncontrolled-tab-example"
        mountOnEnter={false}
        unmountOnExit={false}
        variant="tabs"
      >
        <Tab
          eventKey="pie"
          title="Expenses Breakdown"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Purchases by Category 
            </h1>
            <Doughnut
              options={
                Object {
                  "legend": Object {
                    "display": false,
                    "position": "right",
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="line"
          title="Account Breakdown"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Remaining Funds (in $) by Date 
            </h1>
            <Line
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="bar"
          title="Income vs Expense"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Monthly Summary 
            </h1>
            <Bar
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
        <Tab
          eventKey="variable-bar"
          title="Category History"
        >
          <div
            className="content-container--charts"
          >
            <h1>
               Category History 
            </h1>
            <h3>
              add/remove desired categories
            </h3>
            <p>
              ***Warning*** Information only updates when categories are change
            </p>
            <p>
              There is no auto-update when dates change
            </p>
            <StateManager
              className="dropdown"
              defaultInputValue=""
              defaultMenuIsOpen={false}
              defaultValue={null}
              isClearable={true}
              isMulti={true}
              onChange={[Function]}
              placeholder="Select Categories to show"
            />
            <p>
              Chart HERE 
            </p>
            <Bar
              data={
                Object {
                  "datasets": Array [
                    Object {
                      "data": Array [
                        0,
                      ],
                    },
                  ],
                  "labels": Array [
                    "no data",
                  ],
                }
              }
              options={
                Object {
                  "legend": Object {
                    "display": false,
                  },
                }
              }
            />
          </div>
        </Tab>
      </Tabs>
    </div>
  </div>
</div>
`;
